@@ -1,5 +1,10 @@
 2007-06-18  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/animationplay.c: applied modified patch from
+	Paul Seidel that adds controls for the playback speed (bug #338380).
+
+2007-06-18  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/oilify.c: applied patch from Daniel Richard G.
 	which adds a new PDB entry with more options and improves speed
 	and quality of the algorithm (bug #347075).
